<resources>
    <string name="app_name">API Challenge</string>
    <string name="blankDescription" />
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="blank" />
    <string name="enterIDOrName">Enter ID or Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="type1">Type 1</string>
    <string name="type2">Type 2</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="specialAttack">S. Attack</string>
    <string name="specialDefense">S. Defense</string>
    <string name="speed">Speed</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
</resources>