<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokemon_">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_id"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/id"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:srcCompat="@drawable/pokeball" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_weight"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintEnd_toEndOf="@+id/tv_height"
        app:layout_constraintStart_toStartOf="@+id/tv_height"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_height"
        app:layout_constraintEnd_toStartOf="@+id/tv_type_1"
        app:layout_constraintStart_toEndOf="@id/tv_height"
        app:layout_constraintTop_toTopOf="@+id/tv_height"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        app:layout_constraintEnd_toEndOf="@+id/tv_weight"
        app:layout_constraintStart_toStartOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <TextView
        android:id="@+id/tv_type_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_weight"
        app:layout_constraintEnd_toStartOf="@id/tv_type_2"
        app:layout_constraintStart_toEndOf="@id/tv_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_weight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type1"
        app:layout_constraintEnd_toEndOf="@+id/tv_type_1"
        app:layout_constraintStart_toStartOf="@+id/tv_type_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_1" />

    <TextView
        android:id="@+id/tv_type_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_type_1"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintStart_toEndOf="@id/tv_type_1"
        app:layout_constraintTop_toTopOf="@+id/tv_type_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type2"
        app:layout_constraintEnd_toEndOf="@+id/tv_type_2"
        app:layout_constraintStart_toStartOf="@+id/tv_type_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_2" />

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp" />

    <TextView
        android:id="@+id/tv_atk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/tv_hp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_atk"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/tv_atk" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defense"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_satk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_def"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/tv_def"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialAttack"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sdef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_satk"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/tv_satk" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialDefense"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_spd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sdef"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/tv_sdef" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@id/textView18"/>

    <ListView
        android:id="@+id/lv_moves"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>